--- a/ResearchQ.Rmd
+++ b/ResearchQ.Rmd
@@ -10,3 +10,17 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
+## Front Matter
+
+```{r}
+remove(list = ls())
+library(readxl)
+```
+
+## Read in Datasets
+
+```{r}
+CODGameModes <- read.csv("~/Documents/GitHub/stat380finalproject/CODGameModes.csv")
+CODGames1 <- read.csv("~/Documents/GitHub/stat380finalproject/CODGames_p1_380.csv")
+CODGames2 <- read.csv("~/Documents/GitHub/stat380finalproject/CODGames_p2_380.csv")
+```
