--- a/ResearchQ.Rmd
+++ b/ResearchQ.Rmd
@@ -45,7 +45,7 @@ CODGames <- bind_rows(CODGames1 %>% mutate(Player = "Player1"),
 
 ### Scale XP variables
 ```{r}
-CODGames %>% 
+CODGames <- CODGames %>% 
   mutate(ScaledXP = ifelse(XPType == "10% Boost", TotalXP / 1.1, TotalXP / 2.1)) %>% 
   select(Eliminations, Deaths, Score, Damage, ScaledXP)
 ```
@@ -65,3 +65,4 @@ CODGames %>%
 
 
 ```
+
